--- a/requirements.txt
+++ b/requirements.txt
@@ -12,9 +12,11 @@ chardet==3.0.4
 constantly==15.1.0
 cryptography==3.0
 cssselect==1.1.0
+dj-database-url==0.5.0
 Django==3.0.8
 django-cleanup==5.1.0
 django-crispy-forms==1.9.2
+django-heroku==0.3.1
 djangorestframework==3.11.1
 future==0.18.2
 gunicorn==20.0.4
@@ -23,11 +25,13 @@ idna==2.10
 incremental==17.5.0
 isort==4.3.21
 lazy-object-proxy==1.4.3
+lxml==4.5.2
 mccabe==0.6.1
 multidict==5.0.2
 oauthlib==3.1.0
 pefile==2019.4.18
 Pillow==7.2.0
+psycopg2==2.8.6
 pycodestyle==2.6.0
 pycparser==2.20
 PyDispatcher==2.0.5
@@ -46,6 +50,7 @@ sqlparse==0.3.1
 toml==0.10.1
 typing-extensions==3.7.4.3
 urllib3==1.25.10
+whitenoise==5.2.0
 wrapt==1.12.1
 yarl==1.6.3
 zope.interface==5.1.0
