--- a/.gitignore
+++ b/.gitignore
@@ -34,6 +34,7 @@ MANIFEST
 #  before PyInstaller builds the exe, so as to inject date/other infos into it.
 *.manifest
 *.spec
+staticfiles/
 
 # Installer logs
 pip-log.txt
