--- a/requirements.txt
+++ b/requirements.txt
@@ -30,7 +30,7 @@ mccabe==0.6.1
 multidict==5.0.2
 oauthlib==3.1.0
 pefile==2019.4.18
-Pillow==8.2.0
+pillow>=8.3.2
 psycopg2==2.8.6
 pycodestyle==2.6.0
 pycparser==2.20
